UF-16223: changes after review
