# src/main/resources/api/openapi.yaml
@@ -7,7 +7,7 @@ info:
     url: https://opensource.org/licenses/MIT
   version: "11.2"
 servers:
-  - url: http://localhost:52910
+  - url: http://localhost:58371
     description: Generated server url
 tags:
   - name: Notes
@@ -1752,7 +1752,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ConversationRequest"
+              $ref: "#/components/schemas/Conversation"
         required: true
       responses:
         "201":
@@ -1921,7 +1921,7 @@ paths:
               type: object
               properties:
                 message:
-                  $ref: "#/components/schemas/MessageRequest"
+                  $ref: "#/components/schemas/Message"
                 attachments:
                   type: array
                   items:
@@ -3087,7 +3087,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ConversationRequest"
+              $ref: "#/components/schemas/Conversation"
         required: true
       responses:
         "200":
@@ -4061,6 +4061,12 @@ components:
     Problem:
       type: object
       properties:
+        title:
+          type: string
+        detail:
+          type: string
+        status:
+          $ref: "#/components/schemas/StatusType"
         instance:
           type: string
           format: uri
@@ -4071,20 +4077,14 @@ components:
           type: object
           additionalProperties:
             type: object
-        status:
-          $ref: "#/components/schemas/StatusType"
-        title:
-          type: string
-        detail:
-          type: string
     StatusType:
       type: object
       properties:
+        reasonPhrase:
+          type: string
         statusCode:
           type: integer
           format: int32
-        reasonPhrase:
-          type: string
     ConstraintViolationProblem:
       type: object
       properties:
@@ -4125,6 +4125,8 @@ components:
           type: string
         message:
           type: string
+        detail:
+          type: string
         instance:
           type: string
           format: uri
@@ -4132,8 +4134,6 @@ components:
           type: object
           additionalProperties:
             type: object
-        detail:
-          type: string
         suppressed:
           type: array
           items:
@@ -4196,6 +4196,12 @@ components:
                 type: boolean
         message:
           type: string
+        title:
+          type: string
+        detail:
+          type: string
+        status:
+          $ref: "#/components/schemas/StatusType"
         instance:
           type: string
           format: uri
@@ -4206,12 +4212,6 @@ components:
           type: object
           additionalProperties:
             type: object
-        status:
-          $ref: "#/components/schemas/StatusType"
-        title:
-          type: string
-        detail:
-          type: string
         suppressed:
           type: array
           items:
@@ -4579,11 +4579,11 @@ components:
           type: string
           description: Priority of the errand
           example: HIGH
-          default: MEDIUM
           enum:
             - HIGH
             - MEDIUM
             - LOW
+          default: MEDIUM
         description:
           type: string
           description: Description of the errand
@@ -5119,12 +5119,17 @@ components:
           type: boolean
           description: Is message internal
           example: true
-    ConversationRequest:
+    Conversation:
       required:
         - topic
         - type
       type: object
       properties:
+        id:
+          type: string
+          description: Conversation ID
+          readOnly: true
+          example: 1aefbbb8-de82-414b-b5d7-ba7c5bbe4506
         topic:
           minLength: 1
           type: string
@@ -5148,10 +5153,11 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/KeyValues"
-      description: ConversationRequest model
+      description: Conversation model
     ConversationType:
       type: string
       description: ConversationType model
+      example: INTERNAL
       enum:
         - INTERNAL
         - EXTERNAL
@@ -5183,6 +5189,55 @@ components:
           items:
             type: string
       description: KeyValues model
+    Message:
+      required:
+        - content
+      type: object
+      properties:
+        id:
+          type: string
+          description: Message ID
+          readOnly: true
+          example: 1aefbbb8-de82-414b-b5d7-ba7c5bbe4506
+        inReplyToMessageId:
+          type: string
+          description: The ID of the replied message
+          example: 1aefbbb8-de82-414b-b5d7-ba7c5bbe4506
+        created:
+          type: string
+          description: The timestamp when the message was created.
+          format: date-time
+          readOnly: true
+        createdBy:
+          $ref: "#/components/schemas/Identifier"
+        content:
+          minLength: 1
+          type: string
+          description: The content of the message.
+          example: "Hello, how can I help you?"
+        readBy:
+          type: array
+          readOnly: true
+          items:
+            $ref: "#/components/schemas/ReadBy"
+        attachments:
+          type: array
+          readOnly: true
+          items:
+            $ref: "#/components/schemas/Attachment"
+      description: Message model
+    ReadBy:
+      type: object
+      properties:
+        identifier:
+          $ref: "#/components/schemas/Identifier"
+        readAt:
+          type: string
+          description: The timestamp when the message was read.
+          format: date-time
+          example: 2023-01-01T12:00:00+01:00
+      description: Readby model
+      readOnly: true
     PatchNotification:
       required:
         - errandId
@@ -5366,49 +5421,24 @@ components:
           example:
             key1: value1
             key2: value2
-    Conversation:
-      type: object
-      properties:
-        id:
-          type: string
-          description: Conversation ID
-          example: 1aefbbb8-de82-414b-b5d7-ba7c5bbe4506
-        topic:
-          type: string
-          description: The message-exchange topic
-          example: The conversation topic
-        type:
-          $ref: "#/components/schemas/ConversationType"
-        relationIds:
-          type: array
-          items:
-            type: string
-        participants:
-          type: array
-          items:
-            $ref: "#/components/schemas/Identifier"
-        externalReferences:
-          type: array
-          items:
-            $ref: "#/components/schemas/KeyValues"
-        metadata:
-          type: array
-          items:
-            $ref: "#/components/schemas/KeyValues"
-      description: Conversation model
     PageErrand:
       type: object
       properties:
-        totalPages:
-          type: integer
-          format: int32
         totalElements:
           type: integer
           format: int64
+        totalPages:
+          type: integer
+          format: int32
         first:
           type: boolean
         last:
           type: boolean
+        numberOfElements:
+          type: integer
+          format: int32
+        pageable:
+          $ref: "#/components/schemas/PageableObject"
         size:
           type: integer
           format: int32
@@ -5421,21 +5451,11 @@ components:
           format: int32
         sort:
           $ref: "#/components/schemas/SortObject"
-        pageable:
-          $ref: "#/components/schemas/PageableObject"
-        numberOfElements:
-          type: integer
-          format: int32
         empty:
           type: boolean
     PageableObject:
       type: object
       properties:
-        offset:
-          type: integer
-          format: int64
-        sort:
-          $ref: "#/components/schemas/SortObject"
         unpaged:
           type: boolean
         paged:
@@ -5446,14 +5466,19 @@ components:
         pageSize:
           type: integer
           format: int32
+        offset:
+          type: integer
+          format: int64
+        sort:
+          $ref: "#/components/schemas/SortObject"
     SortObject:
       type: object
       properties:
-        empty:
-          type: boolean
         unsorted:
           type: boolean
         sorted:
+          type: boolean
+        empty:
           type: boolean
     CommitMetadata:
       type: object
@@ -5661,45 +5686,4 @@ components:
           type: boolean
           description: Is message internal
           example: true
-    Message:
-      type: object
-      properties:
-        id:
-          type: string
-          description: Message ID
-          example: 1aefbbb8-de82-414b-b5d7-ba7c5bbe4506
-        inReplyToMessageId:
-          type: string
-          description: The ID of the replied message
-          example: 1aefbbb8-de82-414b-b5d7-ba7c5bbe4506
-        created:
-          type: string
-          description: The timestamp when the message was created.
-          format: date-time
-        createdBy:
-          $ref: "#/components/schemas/Identifier"
-        content:
-          type: string
-          description: The content of the message.
-          example: "Hello, how can I help you?"
-        readBy:
-          type: array
-          items:
-            $ref: "#/components/schemas/ReadBy"
-        attachments:
-          type: array
-          items:
-            $ref: "#/components/schemas/Attachment"
-      description: Message model
-    ReadBy:
-      type: object
-      properties:
-        identifier:
-          $ref: "#/components/schemas/Identifier"
-        readAt:
-          type: string
-          description: The timestamp when the message was read.
-          format: date-time
-          example: 2023-01-01T12:00:00+01:00
-      description: Readby model
   securitySchemes: { }
